Add new Bootstrap_3_1_1 module.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Themes.csproj
@@ -69,16 +69,10 @@
     <Compile Include="Bootstrap_3_1_1_SimpleBlog\obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="Bootstrap_3_1_1_SimpleBlog\obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Bootstrap_3_1_1_SimpleBlog\ResourceManifest.cs" />
-    <Compile Include="Contoso\Code\ContentShapeProvider.cs" />
-    <Compile Include="Contoso\obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="Contoso\obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="Contoso\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="Contoso\obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="Contoso\obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="Contoso\obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bootstrap_3_1_1_Base\Documentation\BootstrapComponents.txt" />
     <Content Include="Bootstrap_3_1_1_Base\Scripts\theme.js" />
     <Content Include="Bootstrap_3_1_1_Base\Styles\Less\Bootstrap\bootstrap.css" />
     <Content Include="Bootstrap_3_1_1_Base\Styles\Site.css" />
@@ -154,95 +148,6 @@
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\Site.css" />
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Theme.png" />
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Theme.txt" />
-    <Content Include="Contoso\bin\Autofac.Configuration.dll" />
-    <Content Include="Contoso\bin\Autofac.Configuration.xml" />
-    <Content Include="Contoso\bin\Autofac.dll" />
-    <Content Include="Contoso\bin\Autofac.xml" />
-    <Content Include="Contoso\bin\Castle.Core.dll" />
-    <Content Include="Contoso\bin\Castle.Core.xml" />
-    <Content Include="Contoso\bin\Contoso.dll" />
-    <Content Include="Contoso\bin\Contoso.pdb" />
-    <Content Include="Contoso\bin\FluentNHibernate.dll" />
-    <Content Include="Contoso\bin\FluentNHibernate.xml" />
-    <Content Include="Contoso\bin\Iesi.Collections.dll" />
-    <Content Include="Contoso\bin\Iesi.Collections.xml" />
-    <Content Include="Contoso\bin\log4net.dll" />
-    <Content Include="Contoso\bin\log4net.xml" />
-    <Content Include="Contoso\bin\Newtonsoft.Json.dll" />
-    <Content Include="Contoso\bin\Newtonsoft.Json.xml" />
-    <Content Include="Contoso\bin\NHibernate.dll" />
-    <Content Include="Contoso\bin\NHibernate.Linq.dll" />
-    <Content Include="Contoso\bin\NHibernate.SqlAzure.dll" />
-    <Content Include="Contoso\bin\NHibernate.xml" />
-    <Content Include="Contoso\bin\Orchard.Alias.dll" />
-    <Content Include="Contoso\bin\Orchard.Alias.pdb" />
-    <Content Include="Contoso\bin\Orchard.Autoroute.dll" />
-    <Content Include="Contoso\bin\Orchard.Autoroute.pdb" />
-    <Content Include="Contoso\bin\Orchard.Core.dll" />
-    <Content Include="Contoso\bin\Orchard.Core.pdb" />
-    <Content Include="Contoso\bin\Orchard.Framework.dll" />
-    <Content Include="Contoso\bin\Orchard.Framework.pdb" />
-    <Content Include="Contoso\bin\Orchard.Tokens.dll" />
-    <Content Include="Contoso\bin\Orchard.Tokens.pdb" />
-    <Content Include="Contoso\bin\System.Net.Http.Formatting.dll" />
-    <Content Include="Contoso\bin\System.Net.Http.Formatting.xml" />
-    <Content Include="Contoso\bin\System.Web.Http.dll" />
-    <Content Include="Contoso\bin\System.Web.Http.WebHost.dll" />
-    <Content Include="Contoso\bin\System.Web.Http.WebHost.xml" />
-    <Content Include="Contoso\bin\System.Web.Http.xml" />
-    <Content Include="Contoso\bin\System.Web.Mvc.dll" />
-    <Content Include="Contoso\bin\System.Web.Mvc.xml" />
-    <Content Include="Contoso\bin\System.Web.Razor.dll" />
-    <Content Include="Contoso\bin\System.Web.Razor.xml" />
-    <Content Include="Contoso\bin\System.Web.WebPages.Deployment.dll" />
-    <Content Include="Contoso\bin\System.Web.WebPages.Deployment.xml" />
-    <Content Include="Contoso\bin\System.Web.WebPages.dll" />
-    <Content Include="Contoso\bin\System.Web.WebPages.Razor.dll" />
-    <Content Include="Contoso\bin\System.Web.WebPages.Razor.xml" />
-    <Content Include="Contoso\bin\System.Web.WebPages.xml" />
-    <Content Include="Contoso\Content\bootstrap.css" />
-    <Content Include="Contoso\Content\bootstrap.min.css" />
-    <Content Include="Contoso\Content\images\bkg.jpg" />
-    <Content Include="Contoso\Content\images\comment-arrow.png" />
-    <Content Include="Contoso\Content\images\content-bkg.png" />
-    <Content Include="Contoso\Content\images\content-bottom.png" />
-    <Content Include="Contoso\Content\images\content-top.png" />
-    <Content Include="Contoso\Content\images\feature-bkg-bottom.png" />
-    <Content Include="Contoso\Content\images\feature-bkg-top.png" />
-    <Content Include="Contoso\Content\images\feature-bkg.png" />
-    <Content Include="Contoso\Content\images\Gallery\feature01.jpg" />
-    <Content Include="Contoso\Content\images\Gallery\feature02.jpg" />
-    <Content Include="Contoso\Content\images\Gallery\feature03.jpg" />
-    <Content Include="Contoso\Content\images\Gallery\feature04.jpg" />
-    <Content Include="Contoso\Content\images\icon-location.png" />
-    <Content Include="Contoso\Content\images\menu-divider.png" />
-    <Content Include="Contoso\Content\images\menu-hover-left.png" />
-    <Content Include="Contoso\Content\images\menu-hover.png" />
-    <Content Include="Contoso\Content\images\menu-left.png" />
-    <Content Include="Contoso\Content\images\menu-right.png" />
-    <Content Include="Contoso\Content\images\nav-arrow-left.png" />
-    <Content Include="Contoso\Content\images\nav-arrow-right.png" />
-    <Content Include="Contoso\Content\images\sub-header.png" />
-    <Content Include="Contoso\Content\Site.css" />
-    <Content Include="Contoso\Contoso.csproj" />
-    <Content Include="Contoso\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Contoso\Instructions.txt" />
-    <Content Include="Contoso\obj\Debug\Contoso.csproj.FileListAbsolute.txt" />
-    <Content Include="Contoso\obj\Debug\Contoso.dll" />
-    <Content Include="Contoso\obj\Debug\Contoso.pdb" />
-    <Content Include="Contoso\obj\Release\Contoso.csproj.FileListAbsolute.txt" />
-    <Content Include="Contoso\obj\Release\Contoso.dll" />
-    <Content Include="Contoso\obj\Release\Contoso.pdb" />
-    <Content Include="Contoso\Scripts\bootstrap.js" />
-    <Content Include="Contoso\Scripts\bootstrap.min.js" />
-    <Content Include="Contoso\Scripts\easySlider.js" />
-    <None Include="Contoso\Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Contoso\Scripts\jquery-1.10.2.js" />
-    <Content Include="Contoso\Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Contoso\Scripts\modernizr-2.6.2.js" />
-    <Content Include="Contoso\Styles\Site.css" />
-    <Content Include="Contoso\Theme.png" />
-    <Content Include="Contoso\Theme.txt" />
     <Content Include="TheAdmin\Scripts\admin.js" />
     <Content Include="TheAdmin\Styles\ie.css" />
     <Content Include="TheAdmin\Styles\ie7.css" />
@@ -416,7 +321,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bootstrap_3_1_1_GardenFaire\Content\Web.config" />
-    <Content Include="Bootstrap_3_1_1_GardenFaire\Placement.info" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Scripts\Web.config" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Styles\Theme.less" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Styles\Web.config" />
@@ -560,37 +464,15 @@
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Views\Layout.cshtml" />
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Views\Parts.TagCloud.cshtml" />
     <Content Include="Bootstrap_3_1_1_SimpleBlog\Web.config" />
-    <Content Include="Contoso\bin\Contoso.dll.config" />
-    <Content Include="Contoso\Content\Web.config" />
-    <Content Include="Contoso\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Contoso\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Contoso\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Contoso\obj\Debug\Contoso.csprojResolveAssemblyReference.cache" />
-    <Content Include="Contoso\obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <Content Include="Contoso\obj\Release\Contoso.csprojResolveAssemblyReference.cache" />
-    <Content Include="Contoso\obj\Release\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <Content Include="Contoso\packages.config" />
-    <Content Include="Contoso\Placement.info" />
-    <Content Include="Contoso\Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Contoso\Scripts\Web.config" />
-    <Content Include="Contoso\Styles\Web.config" />
-    <Content Include="Contoso\Views\BadgeOfHonor.cshtml" />
-    <Content Include="Contoso\Views\Branding.cshtml" />
-    <Content Include="Contoso\Views\Content-HomePage.cshtml" />
-    <Content Include="Contoso\Views\Content.cshtml" />
-    <Content Include="Contoso\Views\Layout.cshtml" />
-    <Content Include="Contoso\Views\Shared\_Layout.cshtml" />
-    <Content Include="Contoso\Views\Web.config" />
-    <Content Include="Contoso\Views\_ViewStart.cshtml" />
-    <Content Include="Contoso\web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Bootstrap_3_1_1_Base\Views\Fields\" />
     <Folder Include="Bootstrap_3_1_1_GardenFaire\Views\" />
     <Folder Include="Bootstrap_3_1_1_SimpleBlog\obj\Debug\TempPE\" />
     <Folder Include="Bootstrap_3_1_1_SimpleBlog\obj\Release\TempPE\" />
-    <Folder Include="Contoso\obj\Debug\TempPE\" />
-    <Folder Include="Contoso\obj\Release\TempPE\" />
-    <Folder Include="Contoso\Zones\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Bootstrap_3_1_1_Base\Styles\Less\Site\_TheThemeMachine-Bootstrap-Thumbnails.less" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
