--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Bootstrap_3_1_1/Bootstrap_3_1_1.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Bootstrap_3_1_1/Bootstrap_3_1_1.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -19,6 +19,11 @@
     <OldToolsVersion>4.0</OldToolsVersion>
     <UpgradeBackupLocation />
     <TargetFrameworkProfile />
+    <UseIISExpress>false</UseIISExpress>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -62,17 +67,15 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Styles\Bootstrap\bootstrap.min.css" />
+    <Content Include="Styles\compile-lessc.txt" />
+    <Content Include="Styles\Module\module.css" />
+    <Content Include="Styles\Module\module.min.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
     <Content Include="Properties\AssemblyInfo.cs" />
     <Content Include="Module.txt" />
-    <Folder Include="Properties" />
-    <Folder Include="Controllers" />
-    <Folder Include="Views" />
-    <Folder Include="Models" />
-    <Folder Include="Scripts" />
-    <Folder Include="Styles" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Orchard\Orchard.Framework.csproj">
@@ -83,6 +86,138 @@
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Module\less\module.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\alerts.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\badges.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\bootstrap.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\breadcrumbs.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\button-groups.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\buttons.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\carousel.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\close.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\code.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\component-animations.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\dropdowns.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\forms.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\glyphicons.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\grid.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\input-groups.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\jumbotron.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\labels.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\list-group.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\media.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\mixins.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\modals.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\navbar.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\navs.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\normalize.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\pager.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\pagination.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\panels.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\popovers.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\print.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\progress-bars.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\responsive-utilities.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\scaffolding.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\tables.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\theme.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\thumbnails.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\tooltip.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\type.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\utilities.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\variables.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Styles\Bootstrap\less\wells.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Migrations.cs" />
+    <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
