--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
@@ -104,6 +104,10 @@
       <Project>{73a7688a-5bd3-4f7e-adfa-ce36c5a10e3b}</Project>
       <Name>Orchard.MediaLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orchard.Widgets\Orchard.Widgets.csproj">
+      <Project>{194d3ccc-1153-474d-8176-fde8d7d0d0bd}</Project>
+      <Name>Orchard.Widgets</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Styles\Module\less\module.less" />
@@ -245,7 +249,9 @@
     <Content Include="Views\Parts\Image.Summary.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Placement.info" />
+    <Content Include="Placement.info">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Fields\MediaLibraryPicker-IntroImage.cshtml" />
@@ -255,6 +261,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\BootstrapWrapper.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Widget-BootstrapAffixSubnav.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
