--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Bootstrap_3_1_1_Base.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Bootstrap_3_1_1_Base.csproj
@@ -134,7 +134,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Documentation\BootstrapComponents.txt" />
     <Content Include="Scripts\theme.js" />
     <Content Include="Styles\Site.css" />
     <Content Include="Styles\Theme.css" />
@@ -146,9 +145,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Fields\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\..\Orchard\Orchard.Framework.csproj">
       <Project>{2d1d92bb-4555-4cbe-8d0e-63563d6ce4c6}</Project>
