--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
@@ -238,6 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrap.cs" />
+    <Compile Include="Filters\SubnavFilter.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\BootstrapFactory.cs" />
