--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/BigFont.Bootstrap.Components.csproj
@@ -285,7 +285,13 @@
     <Content Include="Views\Parts\ContactUs.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\EditorTemplates\Fields\ContactUs.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts\ContactUs.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\MenuWidget-BootstrapSubnav.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Widget-BootstrapSubnav.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
